syntax = "proto3";

package extractor;

option go_package = "github.com/motionrobot/webdoc/proto";

message ImageSrcEle {
  string url = 1;
  string size_desc = 2;
  string media = 3;
}

message ImageElement {
  string url = 1;
  string text = 2;
  string alt = 3;
  int32 width = 4;
  int32 height = 5;
  repeated ImageSrcEle src_set = 6;
}

message CompositeDoc {
  string url = 1;
  string html = 2;
  repeated ImageElement images = 3;
}

message ImageCrawlInfo {
  string web_url = 1;
  ImageElement img_ele = 2;
  string cached_file = 3;
}